--- a/post/templates/home.html
+++ b/post/templates/home.html
@@ -23,6 +23,14 @@
 	</div>
 	{% endfor %}
 	<hr>
+    <div>评论数top5文章</div>
+	{% for a, n in top5 %}
+	<div class="index">
+		<span class="date">{{ a.date }}</span>
+		<a href="/post/show/?aid={{a.id}}">{{a.title}}</a>
+		<span class="date" style="float: right;">访问数: {{n}}</span>
+	</div>
+	{% endfor %}
 
 
 {% endblock %}
