--- a/post/templates/create.html
+++ b/post/templates/create.html
@@ -10,6 +10,7 @@
             <div>
                 <textarea name="content" rows="20" cols="100">{{article.content}}</textarea>
             </div>
+            <div><input type="text" name="tags" value="{{tags}}"></div>
             <input type="submit" name="提交">
         </form>
     </div>
